# animal-game

./: CMakeLists.txt  DataTypes.h  LICENSE  README.md  TBinaryTreeNode.h  TEventData.h  TGame.cpp  TGame.h  TGameConfig.h  TGameEventData.h  TGameStateMachine.cpp  TGameStateMachine.h  TGameStateMachineConfig.h  TState.cpp  TState.h  TStateMachine.cpp  TStateMachine.h  main.cpp
config/: emptyProgress.json  gsmConfig.json  progressConfig.json
